Change tool bar color added pranavs piction help page gramer

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body.fade-out {
 
 /* ===== Toolbar ===== */
 .toolbar {
-    background-color: #028a5e;
+    background-color: #000000;
     padding: 12px;
     display: flex;
     justify-content: center;
